<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/produto"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:textSize="19sp"
        android:textStyle="bold" 
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/categoria"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:textSize="19sp"
        android:textStyle="bold"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/precoMinimo"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:textSize="19sp"
        android:textStyle="bold" 
        android:inputType="text" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/precoMaximo"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:textSize="19sp"
        android:textStyle="bold" 
        android:inputType="text" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Lojas"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:textSize="19sp"
        android:textStyle="bold" 
        android:inputType="text" />

</LinearLayout>